# ChangeLog for dev-util/debootstrap
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.281 2015/02/28 13:23:30 ago Exp $

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for ia64, wrt bug #539644

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for sparc, wrt bug #539644

  26 Feb 2015; Markus Meier <maekke@gentoo.org> debootstrap-1.0.67.ebuild:
  arm stable, bug #539644

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for x86, wrt bug #539644

  24 Feb 2015; Mike Frysinger <vapier@gentoo.org> debootstrap-1.0.67.ebuild:
  Add mips love.

  24 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for alpha, wrt bug #539644

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for ppc64, wrt bug #539644

  21 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for ppc, wrt bug #539644

  19 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for amd64, wrt bug #539644

  13 Feb 2015; Jeroen Roovers <jer@gentoo.org> debootstrap-1.0.67.ebuild:
  Stable for HPPA (bug #539644).

*debootstrap-1.0.67 (15 Jan 2015)

  15 Jan 2015; Jeroen Roovers <jer@gentoo.org> -debootstrap-1.0.64.ebuild,
  -debootstrap-1.0.65.ebuild, +debootstrap-1.0.67.ebuild:
  Version bump.

*debootstrap-1.0.66 (25 Nov 2014)

  25 Nov 2014; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.66.ebuild:
  Version bump.

*debootstrap-1.0.65 (12 Nov 2014)

  12 Nov 2014; Jeroen Roovers <jer@gentoo.org> -debootstrap-1.0.62.ebuild,
  -debootstrap-1.0.63.ebuild, +debootstrap-1.0.65.ebuild:
  Version bump.

*debootstrap-1.0.64 (20 Oct 2014)

  20 Oct 2014; Jeroen Roovers <jer@gentoo.org> +debootstrap-1.0.64.ebuild:
  Version bump.

*debootstrap-1.0.63 (25 Sep 2014)
