@@ -1,31 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST debootstrap_1.0.56.tar.gz 59501 SHA256 14b40be6cc807a2013ed05105325638bd56643cd289dfa91321d9d1d7a393e7b SHA512 831bd97cd8fe5338315d812c683055f3879ca55c653d565886faf3d17f2fc9462beecd05e923ea8a9ae713c0398e59c6a4affd9b557cf181c04bc2034641fbac WHIRLPOOL ab5eef9656fe24b335ed75ac99bcc4e45314b9ae9e440efb47f8114f7af3ec1ec114bd112871f801dc1553274b71015c9990bfb390b96e9d3ba86ec600e95068
-DIST debootstrap_1.0.59.tar.xz 49500 SHA256 767d151e68b36d80b44c15430d804616fba77046fd6db78c2aac1b9ef0f1ca31 SHA512 283d20fc7c1289ccf4b964345973afad4a75ffbb6732f0eb84593737d5ced077386e4e390a145ecb86eb63c29c389a8840e7d3eace62e2428cf6cd8d02e4e632 WHIRLPOOL e197bcba942ec486ccbec90f353090781f965f80323db9086c68847660d7e5f57ceda8d356f79329211b7c12c1467575cc8e3c612310eb80fb6194eb00407c7a
-DIST debootstrap_1.0.66.tar.gz 61338 SHA256 33246d6926aee18eef841169d0c9c45f8a7747e95ffcf7d08a0eb833f735f095 SHA512 fb047c44ca2d81240af4731dd243e2d144d265ccf0a69e2f1c7d41d954c667aa8120cdea402789b5af3304b84b4a17f6056fa5549f0a402c3ea9f734e50ccb9b WHIRLPOOL e5e714280078fb3e1e656743e57df5c0e383968d17672539824706a9f0e2e6a3e68936be7bd7e07af00848028ac0612cb7ad6834cf3d62613abeef5d2a3d0ce3
 DIST debootstrap_1.0.67.tar.gz 61863 SHA256 0a12e0a2bbff185d47711a716b1f2734856100e8784361203e834fed0cffa51b SHA512 751cfabdcefa6de099f12377f4e5ac611d97952197040c8d194abc0ac8f3abd59c21110828592bfa2c7a92299db57fe8c6ee0991e11894470f444a71cfd25151 WHIRLPOOL 64acdd3bda9f901b90621a1ce26671075f1a24da748b00ffc1ef9d554fb6ef04bed964988679a168df9e82780a30876c48b6d381dcbe41bd9a7c0f5a8119b261
 DIST devices.tar.gz 47835 SHA256 0d93f93c8b21160069d14e74f8f990a2e0e1e5a90dc828b29e6b3f5aa5829e48 SHA512 994ec8d72e3d52d2d872f7ff0da2336e4cbd3a5fa73bb6cdb9e06f5e7f5b8c69cea639c738fdba1186f382d6dcf62e7746fface664bfbd744aac24b16f034432 WHIRLPOOL 222963bb920e1311bc2f481bba04e49f386b60cce6ce0576424896277e0c4fc6a339d4403d587744c32b0bfb1db6391f200fa8d66117e3f21e1c12f35365d732
-EBUILD debootstrap-1.0.56.ebuild 1029 SHA256 8bd9f64d3f8a2b90777f155dc683e3f098ecc9aa9dbee2d30f3e67ba7fca6111 SHA512 40f750a10641440430ab98c6b9823d9c2f3a0bb75cf3e825e00bdef1feda5a99c71d02fd169952333a78d8ca060a2ba609f94fd77a640cd18d2c986f004af23a WHIRLPOOL bc54abce7e5a6088bf22a9fb4a3f0a578f3236afca2fe2910bb2e34fdc33db6d918e9a00f341095ea5907b3bea403beb5b9fe37669e7166f6c7aeea5194a6243
-EBUILD debootstrap-1.0.59.ebuild 1059 SHA256 6419e64dfc00211177755c626ed3e98202327fc666824099e9f7eae46ba6752e SHA512 2237e4918b930d290f418832c44b4183934332fe747bf291ac9721cf1807f38710e646048b528dee03d1291771f8bfac439ef623d3bd020554897e7429c572cc WHIRLPOOL 0edabf67c149504a491bff161019241c28a98ff1ef5c96d8bbf2829062efb59c3656952d18a094a098c54129e7717a4a315598cc883e4d040a82d11a10f002c3
-EBUILD debootstrap-1.0.66.ebuild 1029 SHA256 234c791d417b3e3e7e2c119efcb2f57d478c906f5897615cd716c17bc41393ad SHA512 2c6a8539570ea8e6c4026579df0a1db0a68ead58ae39998a9ef80742b2f5f2ed8fc6e8d091abdaaf2c65c2cd1aa08cb76df4f96502b53253c7b715ecb58a1d91 WHIRLPOOL 4f8cab06087e4018344f2b9e1ff298fdb3a6b3a7e1c081080588e4e5c23d6b743df6ea8de4eb93af9fd4d402816a64a706268cc37fad5c2e00b1f73780c1a5fa
 EBUILD debootstrap-1.0.67.ebuild 1027 SHA256 f654ddb2524d52f5c5930904516d2f24f88a7c841ebb4512036b42728a5d9c64 SHA512 fd769bc435de3299b38b398610cefd0202f35e9c05f22022152170c4566db52776262346f9896d3e3b7051b1ec4a1bfe9811bce104d275fde9aaba63262e881a WHIRLPOOL f334a99c7671f86f5de1667616b87e51be10353e6df5d7eb96ac7df12f9f49635c125e669e6df11c3a69bc8f6ac1b8eeecee13b67bb1522491dc8f3166e91bb8
-MISC ChangeLog 35043 SHA256 b5ecde7819bb4a79ea59cac26f9ad4dc331ad4aa5decff0e98efae41cdf75048 SHA512 c6c892be87e1976d46c8b6231fc7857235f749842027ddbfc78b5d277f04b074b78ece48029719e22f02cec5dab1c6fb12f8d651978ab38ca1709dfb7afbdd60 WHIRLPOOL 60937f4c0310b35bdc885e7aea36ae3196c05a7b01fa216762283e132b1cc0ea5f9e79a68c7e5864aec9127714aed452cbddc82243b9e3f2104c68b99622db69
+MISC ChangeLog 35184 SHA256 e88b52966e3c6614ab994b3828a7dbc3bbebd9159a314e88c7045754c8fb584d SHA512 f72671689d0717ff04e335f569d00311012601e89e89ab8658b99eca1d1e9209ae2a892147b611bcfdeab5f6d879386a502e81e51cd717c1032c7762559b2084 WHIRLPOOL c9cad26df714880d43e0085b18e2ccf31bca9de54ebad4fd2188ca229b3c84bd5ef996b5b8e36f93b5137619b056f44d3a22abe840df5c25b32d22aee7c7537c
 MISC metadata.xml 254 SHA256 2790aaa1752a64752fb0a90f28f292669aa359e1c1583ad3834746b55e86dbd2 SHA512 b8d3d7e0aaa35ea183b5b2978ed73ddaea52efe0f14ac2f45cbd64fd7d7a49383330ab3bf5f9777681df053584d5f392b6b6c22dbd778abfe39b8e0cc5915220 WHIRLPOOL 3403ae3dad61712af8ca7359fcb2124a509796fcc6a71d5a6c34cbc80ddcbdde48eddc03bbc559250b9bb818d2464b36143d17d98f21c6eacec34b6bda1ba048
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU8cFTAAoJELp701BxlEWf/2kQAJRO5njl2VY08PPxaIC0BFbR
-2QmGgk2WL39C/G4ALsDzxIoXUvm2Fa/hvtUlFXyPTm5U94RHtinwp9qi8X8OgL6X
-PDpCxHGvdLYkoWfRA+xy7kCBdscjG3iCSnGSbC2DnhzIY5poCkjkF1XkM1Eu/zvj
-9eqnB1PhxcOXaJsaXL/568+JNR1rNHVMQ2LSr42jN6Oc33cDplN/qZ7faOhBbZD3
-Qq4xm7YYTNqMz6ML1Yk3p2VOrmQZ3yE36xPyO47WZalBPtz98t0hS1GC4DaOrrvh
-KqIDjQCVKjZZV+oSsnLS5kqeGY7BZoVXK3dsypE5Lc+w5wSryrlmnmLnFmSbtKZn
-SF2C71qSCEEcy20uiVddBBNKaKbZTFnLCT/p31b/zxzpYkeyvgbNYtiCDxJdJTPz
-KVL+mSyvaEtiVB13UEJ7gsLg0Th40+HnZr8c+vLpJ6xr357BOGBLtDyvMvXTI5ea
-Z4YG0qHREUvianPJOhwORD5AQ3DiPqmz6cXrdvxrgkNk5jqSXebruvPZuQWJWuwm
-itb5nGknFLqBaM4AdWAATMDO2C3cZaJwjojVDI063ptU/POYfgS1VkWBlc6jy5fB
-F+UxQJm3wqxieD2ChZDqRx+N/yJLTCrzqWNMIM85XbUi0VQOxXPnjZDx0IuKQELq
-8mPb0shBPnHeLQKqqLav
-=AbJI
+iEYEAREIAAYFAlUnUsMACgkQVWmRsqeSphPbFQCfTE/RBArOXCht3+nx79xblbvS
+yEgAnjpvoKQf7qqAZ6mxnPnrQhiB/BXS
+=UV9h
 -----END PGP SIGNATURE-----
