@@ -1,11 +1,0 @@
-DEFINED_PHASES=compile install postinst unpack
-DESCRIPTION=Debian/Ubuntu bootstrap scripts
-EAPI=5
-HOMEPAGE=http://packages.qa.debian.org/d/debootstrap.html
-KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 ~sh sparc x86 ~amd64-linux ~x86-linux
-LICENSE=MIT
-RDEPEND=app-arch/dpkg net-misc/wget sys-devel/binutils
-SLOT=0
-SRC_URI=mirror://debian/pool/main/d/debootstrap/debootstrap_1.0.56.tar.gz mirror://gentoo/devices.tar.gz
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=a41aea4050312ad832eef92f3883fef9
