@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST opera-beta_29.0.1795.26_amd64.deb 42619680 SHA256 c29ab5ca2a8f1ebc7ece78c0d015b6d62500e8670a7ab574a7d083235a3503b8 SHA512 57304f4024ca8c7f25d4f5796bb22efe30b55031245b4f4308f96d49782e22293267bc05f2bf16552d99b603741b9d001b5ce73a1dba9e70adefe649c24bbd61 WHIRLPOOL 8487834fb4d36a0286846b603ff74f8f0c3d2a7e62bb07b240714db6a9a345ff54dbf33fb8657da2c32a944980cceba806c40695ee89761619ebfaa96735bd51
 DIST opera-beta_29.0.1795.30_amd64.deb 41729102 SHA256 fac8d04a81320b1bd0673cedeef9c407ab12cde040df4f89ee301334b7b82a0e SHA512 2aa2c2e1732da7889014097830de2163325ae5cd084b544e049ed039bbe59287ae12120b5e0cb2f219fdeb02cf725be53e3cf493dcddcf7c4276b37508f10829 WHIRLPOOL 89e7d88f9fd6d7bc143de9494bd54b7342152680ae0f779d938e1b698c0de29db1ccea0b7b96cc4c1305189261eb8aa7dac88fbe49807d2aec5a29703c631f67
-EBUILD opera-beta-29.0.1795.26.ebuild 1949 SHA256 df58987f93902b76ca3576e91d7a0209829a255e3f6bdd8f66c508b35877235b SHA512 2a9b3229c622372ccfac3a1c63f868ab3a36a05174af4b7ca19cc9033a7c7778959585e1502e825e7e6b09b647d864fec798c8b8713fac3767e1dc7fb161e691 WHIRLPOOL 86a5ed14973d0aa96579da4fe85a97f956d42347e5cef3c6f0f4fad1e44c1c430a5e0cf8d3aeb39720e6ef225ba2777610b7ff3dd50b8a5e6c1f02f2d1dc93ca
+DIST opera-beta_29.0.1795.35_amd64.deb 42115226 SHA256 c4b2e05988e82671859fd71cea386ea358fecf787ee306a28ce0783a32f89369 SHA512 b26e5d73d4f15c1169a120ac1be76a37133a0a694bed6df9c0f80f0de1beae22d05162af879a190e0a6e6c8dadf18b4298abcbed9b034ba44f06163ef7da1df7 WHIRLPOOL f8fedac94ecea163931ef696135d69405ebaa2d49f2dd6563a5f111ffa8b1ec758d39668ac9f1b430f51981d754d3ed32d1bc57c479c1d3e108fbc2f4b5e15d6
 EBUILD opera-beta-29.0.1795.30.ebuild 1949 SHA256 766155aa5f76b88e45063d248fe92a39a536f1587fceb06ee15ee6b880e17f77 SHA512 d2987adc76c4ba3eaeef51be9b6b748018b2c7392a9f3fac409170e951a55ac200ac2ead5ec82917d0f7e7b426179f87c8a10a6a778b8a64193329fd955bc58a WHIRLPOOL a7e2661a5427f1cfdd48183e48ab6804ca33c4cbbd4f985434b4438df15abdf82c90541cf24f4fa41d5412b95906aca4dc355f849d72aa8135701d8da90a4397
-MISC ChangeLog 3430 SHA256 f8960d89c89c6a7ce7cd739bd9c8b4582a836f746dec6254a12a4566684c740a SHA512 93cd5aa70119f561ceecb0151e383dffd16fb57b1141878e67619226068a99b103b8641cd11d418f4050f183d9859272b56bfbca2e256d0068ec967e7cbb5721 WHIRLPOOL 498a4727fd6fed8025f8db563c9ec9951b65587b4b0bc5fb7651772ef4666bf0c912c6649332d2721978241981fe4d8d144996d83d821f37f3f920593ad407a7
+EBUILD opera-beta-29.0.1795.35.ebuild 1949 SHA256 489d5b5a80ca79a25ce7b81b32b78e0e0b4a2bb8a00515df303c7b0d5e79eab2 SHA512 07bf1a4372fbf8467a6ff883f3539dd8f49b45403c7496fb27cdc94721045fa31a476f8fba2df62561087b0853cb4748c06d578a566bc69ff250dec3a34c126c WHIRLPOOL 35e75505ed1eb2385c12ba33f8bcb0856216e4da776e9dcdc59744ff76e297b015d70ca1de858dd8d0e4cda1b23c81deb1506fbd1573d90830a096ec82124e2b
+MISC ChangeLog 3602 SHA256 8a2258d2dd66342bdecd92ee533312784f39e71e2f28392172a2a72eed2fbdf7 SHA512 6b1f0eb6c492e05b2f026ee9598d658fb15697faf786d1cbd1390e21c41f1d4d62c437c9393eaf1e56827f5e6c63c0c0b66264cd9c4c6ab0529d7a1b07de2501 WHIRLPOOL 22bb7a6310d801630a7081e3e5653c9af177f53a0397284ee476f08652ff9719b7a7961282c1032783b83a9ba40608577b7d8995be4442f2c27f831b3538af9c
 MISC metadata.xml 224 SHA256 d7ffc52704d4bc0180f6f1c448ea4bdd0e3ff3a562384dc944af4a00debc9620 SHA512 6487ad35c6f3d2e4876714919e7bb01fd65f57e7753cbfc318130727dded4fcf8632a06ab9b7a3016fc1ab127434d1d20de2dd0ef2cc63ad162023f2dbf64b1e WHIRLPOOL 879ad2c41f2e1297b677803b2b0478ed2affc91059b198524795e1a128cf8ab6b9fbe78b53bdd3421041f27b419bce387a267e389111125cd55b05e260abc998
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUbc9AACgkQVWmRsqeSphNtewCeJHJdKawsNOSobh3TsYQjJD29
-jtwAn3Flhd6/2V1DQkQabvKYqoJkhRwa
-=EGoM
+iEYEAREIAAYFAlUnU04ACgkQVWmRsqeSphNItgCfWnQORUPZI6zm5pXuB+LxgNKA
+mVMAnj1hE95h0Cn2KD3eTiXxKJDTo/AE
+=RqgF
 -----END PGP SIGNATURE-----
