@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-beta/opera-beta-29.0.1795.26.ebuild,v 1.1 2015/03/26 05:19:36 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-beta/opera-beta-29.0.1795.35.ebuild,v 1.1 2015/04/10 04:36:28 jer Exp $
 
 EAPI=5
 CHROMIUM_LANGS="
