@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/debootstrap
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.281 2015/02/28 13:23:30 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debootstrap/ChangeLog,v 1.282 2015/04/10 04:34:10 jer Exp $
+
+  10 Apr 2015; Jeroen Roovers <jer@gentoo.org> -debootstrap-1.0.56.ebuild,
+  -debootstrap-1.0.59.ebuild, -debootstrap-1.0.66.ebuild:
+  Old.
 
   28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> debootstrap-1.0.67.ebuild:
   Stable for ia64, wrt bug #539644
